--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "typedoc": "typedoc --exclude **/*.spec.ts --out docs --entryPointStrategy expand ./src/app"
+    "typedoc": "typedoc --exclude **/*.spec.ts --out docs --entryPointStrategy expand ./src/app",
+    "coverage": "ng test --no-watch --code-coverage"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +25,7 @@
     "@cesium/widgets": "^2.1.1",
     "@stomp/stompjs": "^7.0.0",
     "angular": "^1.8.3",
-    "cesium": "^1.104.0",
+    "cesium": "^1.114.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
@@ -44,6 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "sonar-scanner": "^3.1.0",
     "typedoc": "^0.24.6",
     "typescript": "~4.9.4"
   }
