--- a/.github/workflows/build-and-test-on-pull-request.yml
+++ b/.github/workflows/build-and-test-on-pull-request.yml
@@ -23,4 +23,4 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm run test:ci || echo "Ignoring test failures; Should be updated in the future"
+        run: npm run test:ci 
