--- a/.github/workflows/release-docker-image.yml
+++ b/.github/workflows/release-docker-image.yml
@@ -9,6 +9,9 @@ env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ECR_ACCESS_KEY}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_ECR_ACCESS_KEY_SECRET}}
 
+  DOCKERHUB_ACCESS_TOKEN: ${{secrets.DOCKERHUB_ACCESS_TOKEN}}
+
+
 on:
   push:
     branches: ["master", "main", "**"]
