Configured socket connecdtion

--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@angular/router": "^15.2.10",
     "@cesium/widgets": "^2.3.1",
     "@stomp/stompjs": "^7.0.0",
-    "angular": "^1.8.3",
+    "@types/stompjs": "^2.3.9",
+    "angular": "^1.6.10",
     "cesium": "^1.114.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.4",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "tslib": "^2.6.2",
