Added additional step to front-end

--- a/.github/workflows/release-docker-image.yml
+++ b/.github/workflows/release-docker-image.yml
@@ -47,7 +47,7 @@ jobs:
           echo "Extracted Build Number: ${BUILD_NUMBER}"
 
       - name: Build angular project
-        run: npm run build
+        run: npm run build -- --configuration=production
 
       - name: Build Docker Image
         run: |
