--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.host.url=https://sonar.flighttracker.online
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.exclusions=**/node_modules/**
-sonar.exclusions=**/src/environments/**
+sonar.coverage.exclusions= [ **/src/environments/**, **/src/app/utils/**, **/src/lib/simulation-entities/**, **/src/lib/socket-events/**, **/src/lib/utils/** ]
 sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov-report/lcov.info
