--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/stompjs": "^2.3.9",
     "angular": "^1.6.10",
     "cesium": "^1.115.0",
+    "mock-socket": "^9.3.1",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.4",
     "sockjs-client": "^1.6.1",
